--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,8 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* The CSS code `*{ margin: 0; padding: 0; }` is a CSS reset. It sets the margin and padding of all
+elements on the page to 0, effectively removing any default spacing that may be applied by the
+browser. This is often used as a starting point for CSS stylesheets to ensure consistent styling
+across different browsers. */
+*{
+  margin: 0;
+  padding: 0;
 }
